# odoo-crm-nil-adapter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-manifest.json
.github/workflows/: conformance.yml
.superpowers/sdd/: progress.md
conformance/: test_conformance.py  test_contact_projection_degrade.py  test_contact_resolution.py  test_contract_gate.py  test_durability.py  test_erp_document.py  test_full_coverage.py  test_governance.py  test_governance_packs.py  test_intent.py  test_live_odoo.py  test_module_coverage.py  test_packs.py  test_purchase_order_saga.py  test_purchasing.py  test_read_plane.py  test_reference_legibility.py  test_render_portal.py  test_state_witness.py  test_system.py  test_target_resolution.py  test_unexpressibility.py  test_vault_delegation_parity.py  test_xmlrpc_concurrency.py
docs/: ADAPTER-DEV-PLAN.md  NIL-verification-failure-report.md
docs/superpowers/plans/: 2026-07-01-odoo-nil-adapter-module-packs.md  2026-07-01-task1-4-report.md
docs/superpowers/specs/: 2026-07-01-odoo-nil-adapter-module-packs-design.md
src/odoo_crm_nil_adapter/: __init__.py  compensation.py  edge.py  governance.py  models.py  packs.py  read_plane.py  run.py  run_live.py  system.py  translate.py
src/odoo_nil_adapter/: __init__.py  compensation.py  edge.py  governance.py  packs.py  read_plane.py  run.py  run_live.py  system.py  tenant_routing.py  translate.py
